unpackaged/main/default/objects/nbavs__SecurePayForm__c/nbavs__SecurePayForm__c.object-meta.xml
<CustomObject>
    <label>Secure Pay Form</label>
    <nameField>
        <label>Secure Pay Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secure Pay Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>