unpackaged/main/default/objects/nbavs__SecurePayForm__c/fields/nbavs__cv2Prompt__c.field-meta.xml
<CustomField>
    <fullName>nbavs__cv2Prompt__c</fullName>
    <label>CV2 Prompt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>