unpackaged/main/default/objects/nbavs__SecurePayForm__c/fields/nbavs__expiryPrompt__c.field-meta.xml
<CustomField>
    <fullName>nbavs__expiryPrompt__c</fullName>
    <label>Expiry Prompt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>