unpackaged/main/default/objects/nbavs__SecurePayForm__c/fields/nbavs__Fields__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Fields__c</fullName>
    <label>Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>