unpackaged/main/default/objects/nbavs__SecurePayForm__c/fields/nbavs__Mapping__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Mapping__c</fullName>
    <label>Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>