unpackaged/main/default/objects/nbavs__SecurePayForm__c/fields/nbavs__panPrompt__c.field-meta.xml
<CustomField>
    <fullName>nbavs__panPrompt__c</fullName>
    <label>PAN Prompt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>