unpackaged/main/default/objects/nbavs__SecurePayForm__c/fields/nbavs__ReasonCodes__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ReasonCodes__c</fullName>
    <label>Reason Codes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>