unpackaged/main/default/objects/nbavs__SecurePayForm__c/fields/nbavs__securePrompt__c.field-meta.xml
<CustomField>
    <fullName>nbavs__securePrompt__c</fullName>
    <label>Secure Prompt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>